objects/Custom_Clone_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Default_Child_Elements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Child Elements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Clone_Processor_Apex_Class_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Post Clone Processor Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Clone_Children_Processor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Clone Children Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Clone_Parent_Object_Processor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre Clone Parent Object Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_to_Clone_Record_Confirm_Dialog__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Redirect to Clone Record Confirm Dialog</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_UI_Child_Element_Selector__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show UI Child Element Selector</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Clone Setting</label>
</CustomObject>